// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchFromUri() returns correct response for GET request to a valid uri 1`] = `
Object {
  "headers": Object {
    "data": "default sample headers",
  },
  "title": "sample mocked data for GET request to http://example.org/valid/endpoint",
}
`;

exports[`fetchFromUri() returns correct response for GET request with headers to a valid uri  1`] = `
Object {
  "headers": Object {
    "data": "sample headers",
  },
  "title": "sample mocked data for GET request to http://example.org/valid/endpoint",
}
`;

exports[`fetchFromUri() returns correct response for POST request to a valid uri 1`] = `
Object {
  "headers": Object {
    "data": "default sample headers",
  },
  "title": "sample mocked data for POST request to http://example.org/valid/endpoint",
}
`;
